# Gaza

./: Makefile  pyproject.toml
data/raw/: commodities_received_2024.xlsx
src/feature_pipeline/: data_processing.py  data_sourcing.py
src/setup/: config.py  paths.py
